Details - render bug fix, console warning removed

--- a/src/screens/details/Details.css
+++ b/src/screens/details/Details.css
@@ -25,6 +25,10 @@
   padding: 16px;
 }
 
+.cart-header {
+  margin-bottom: 16px!important;
+}
+
 .amount {
   display: flex;
   justify-content: space-between ;
