--- a/src/screens/home/Home.css
+++ b/src/screens/home/Home.css
@@ -1,24 +1,38 @@
 /*css for home component*/
 .grid-container {
-    padding-left: 2%;
-    padding-top: 2%;
+  padding-left: 2%;
+  padding-top: 2%;
+}
+
+.customer-rating {
+  background: #f7dc6f;
+  width: 40%;
+  color: #ffffff;
+  text-align: center;
+}
+
+.customer-price {
+  display: flex;
+  text-align: justify;
+  align-items: center;
+}
+
+.action-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+@media screen  and (max-width:1024px) {
+  .Home-card-1 {
+    margin: auto !important;
+    margin-bottom: 24px !important;
   }
-  
-  .customer-rating {
-    background: #f7dc6f;
-    width: 40%;
-    color: #ffffff;
-    text-align: center;
+  .grid-container {
+    padding-left: 0 !important;
   }
-  
-  .customer-price {
-    display: flex;
-    text-align: justify;
-    align-items: center;
+}
+@media screen  and (max-width:570px){
+  .MuiGrid-container {
+    justify-content: center;
   }
-  
-  .action-container {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-  }
+}
